--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <div class="card">
     <h2>📚 About Smart Resources</h2>
-    <p>We create learner-centred content for Indian schools aligned with IB-PYP and 3C Curriculum, integrating Bloom’s Taxonomy and Inquiry Cycle methodology.</p>
+    <p>We create learner-centred content for Indian and International schools aligned with CBSE, IB, and IGCSE curriculum, integrating Bloom’s Taxonomy and Inquiry Cycle methodology.</p>
   </div>
 </section>
 
