Add interactive paragraph builder app

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
   </div>
 
   <div class="card">
+    <h2>📝 Interactive Paragraph Builder</h2>
+    <p>Practice crafting coherent paragraphs with our step-by-step tool.</p>
+    <a href="paragraph-builder.html" class="button">Open App</a>
+  </div>
+  <div class="card">
     <h2>📚 About Smart Resources</h2>
     <p>Welcome to Smart Resources (SR)! Your go-to destination for interactive, curriculum-aligned educational content for Grades K–12. Whether you're following the CBSE syllabus, the latest NCERT 2025–26 textbooks, or exploring NEP 2020 and NCF 2023 aligned learning paths, we’ve got you covered.</p>
     <p>Explore concept-based video lessons, creative projects, reading-aloud activities, grammar and writing tutorials, comprehension practice, and exam-focused tips designed especially for students from Class 6 to Class 12.</p>
